// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link does not render the external icon even if the href is external 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
}

.emotion-2 svg {
  fill: #0a68c1;
}

.emotion-2:hover:not(:disabled) {
  color: #02509b;
}

.emotion-2:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-2:active:not(:disabled) {
  color: #01396e;
}

.emotion-2:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-2:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-2:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-2 {
    vertical-align: text-bottom;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

<a
    class="emotion-2"
    href="www.google.it"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        test link text
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link does not render the external icon if the href is internal 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
}

.emotion-2 svg {
  fill: #0a68c1;
}

.emotion-2:hover:not(:disabled) {
  color: #02509b;
}

.emotion-2:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-2:active:not(:disabled) {
  color: #01396e;
}

.emotion-2:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-2:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-2:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-2 {
    vertical-align: text-bottom;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

<a
    class="emotion-2"
    href="relative"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        test link text
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link renders as expected in default state 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
}

.emotion-2 svg {
  fill: #0a68c1;
}

.emotion-2:hover:not(:disabled) {
  color: #02509b;
}

.emotion-2:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-2:active:not(:disabled) {
  color: #01396e;
}

.emotion-2:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-2:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-2:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-2 {
    vertical-align: text-bottom;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

<a
    class="emotion-2"
    href="#"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        test link test
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link renders correctly with noUnderline property 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
}

.emotion-2 svg {
  fill: #0a68c1;
}

.emotion-2:hover:not(:disabled) {
  color: #02509b;
}

.emotion-2:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-2:active:not(:disabled) {
  color: #01396e;
}

.emotion-2:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-2:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-2:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-2 {
    vertical-align: text-bottom;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

<a
    class="emotion-2"
    href="#"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        test link text
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link renders the external icon even if the href is internal 1`] = `
<DocumentFragment>
  .emotion-6 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
}

.emotion-6 svg {
  fill: #0a68c1;
}

.emotion-6:hover:not(:disabled) {
  color: #02509b;
}

.emotion-6:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-6:active:not(:disabled) {
  color: #01396e;
}

.emotion-6:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-6:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-6:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-6 {
    vertical-align: text-bottom;
  }
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-2 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-2.emotion-2 {
  width: 16px;
  height: 16px;
}

<a
    class="emotion-6"
    href="/relative"
  >
    <span
      class="emotion-5"
    >
      <span
        class="emotion-1"
      >
        <span
          class="emotion-0"
        >
          test link text
        </span>
      </span>
      <span
        class="emotion-1"
      >
        <svg
          class="emotion-2 emotion-3"
          fill="currentColor"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            External link
          </title>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
          />
        </svg>
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link renders the external icon if the href is external 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
}

.emotion-2 svg {
  fill: #0a68c1;
}

.emotion-2:hover:not(:disabled) {
  color: #02509b;
}

.emotion-2:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-2:active:not(:disabled) {
  color: #01396e;
}

.emotion-2:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-2:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-2:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-2 {
    vertical-align: text-bottom;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

<a
    class="emotion-2"
    href="www.google.it"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        test link text
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`LinkStandalone renders as expected in default state 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-2 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 svg {
  fill: #0a68c1;
}

.emotion-2:hover:not(:disabled) {
  color: #02509b;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-2:active:not(:disabled) {
  color: #01396e;
}

.emotion-2:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-2:visited:not(:disabled) {
  color: #0a68c1;
}

.emotion-2:visited:not(:disabled) svg {
  fill: #0a68c1;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-2 {
    vertical-align: text-bottom;
  }
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  display: inline-block;
  display: block;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<a
    class="emotion-2"
    href="#"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-0"
      >
        test link test
      </span>
    </span>
  </a>
</DocumentFragment>
`;
